General bug fixes and UI changes
Bug fixes:
- Fixed tracking LOAD button seg fault.
- Fixed internal target flipping of 180 degrees.
- Fixed track image not being produced from post-process tab.
- Chessboard calibration circles now show on Linux.
- NCC range changed from 0...1 -> -1...1.
- Max rate now 999ms.

UI changes:
- Moved Camera Calibration from toolbox to tab view.
- Moved Position Calibration from toolbox to tab view.
- Disabled videoposition bar when not needed i.e. rate changing.
- Moved milliseconds (ms) suffix to label in Tracking Tool.
- Changed wording on Print Default Grid button.
- Default square size now 10cm in Camera Calibration.
- Minor UI changes.

Other:
- Update to travis.yml.
- Updated README.
- Updated CONTRIBUTION.

--- a/app/src/tools/gui/VideoPositionBar.ui
+++ b/app/src/tools/gui/VideoPositionBar.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>VideoPositionBar</class>
  <widget class="QWidget" name="VideoPositionBar">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -35,7 +38,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Rate:</string>
+      <string>Rate (ms):</string>
      </property>
     </widget>
    </item>
@@ -51,13 +54,13 @@
       </sizepolicy>
      </property>
      <property name="suffix">
-      <string>ms</string>
+      <string/>
      </property>
      <property name="minimum">
       <number>10</number>
      </property>
      <property name="maximum">
-      <number>500</number>
+      <number>999</number>
      </property>
      <property name="singleStep">
       <number>10</number>
