--- a/app/src/tools/gui/AnalyseResultsWidget.ui
+++ b/app/src/tools/gui/AnalyseResultsWidget.ui
@@ -176,7 +176,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>160</width>
+          <width>220</width>
           <height>0</height>
          </size>
         </property>
@@ -228,6 +228,9 @@
            <attribute name="horizontalHeaderVisible">
             <bool>true</bool>
            </attribute>
+           <attribute name="horizontalHeaderCascadingSectionResizes">
+            <bool>false</bool>
+           </attribute>
            <attribute name="horizontalHeaderStretchLastSection">
             <bool>true</bool>
            </attribute>
@@ -262,22 +265,6 @@
               <string>&amp;Load</string>
              </property>
             </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Expanding</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>5</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
            </item>
            <item>
             <widget class="QPushButton" name="m_analyseBtn">
