--- a/app/src/tools/gui/SetUpRoomToolWidget.ui
+++ b/app/src/tools/gui/SetUpRoomToolWidget.ui
@@ -38,6 +38,9 @@
       <attribute name="horizontalHeaderCascadingSectionResizes">
        <bool>false</bool>
       </attribute>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>120</number>
+      </attribute>
       <attribute name="horizontalHeaderHighlightSections">
        <bool>true</bool>
       </attribute>
