Added fastfwd button to be updated later. Changed step fwd and back icons. Disabled tracking params while loaded

--- a/app/src/tools/gui/TrackRobotToolWidget.ui
+++ b/app/src/tools/gui/TrackRobotToolWidget.ui
@@ -121,6 +121,35 @@
       </widget>
      </item>
      <item>
+      <widget class="QToolButton" name="m_scanFwdBtn">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../res/resources.qrc">
+         <normaloff>:/scan.png</normaloff>:/scan.png</iconset>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="popupMode">
+        <enum>QToolButton::InstantPopup</enum>
+       </property>
+       <property name="autoRaise">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="m_stopBtn">
        <property name="enabled">
         <bool>false</bool>
