--- a/app/src/tools/gui/CaptureVideoToolWidget.ui
+++ b/app/src/tools/gui/CaptureVideoToolWidget.ui
@@ -213,12 +213,22 @@
            <number>3</number>
           </property>
           <item>
-           <widget class="QPushButton" name="m_captureLiveConnectDisconnectBtn">
+           <widget class="QPushButton" name="m_captureLoadResetBtn">
             <property name="enabled">
              <bool>true</bool>
             </property>
             <property name="text">
-             <string>&amp;Live</string>
+             <string>&amp;Load</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="m_captureLiveConnectDisconnectBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>&amp;Connect</string>
             </property>
            </widget>
           </item>
