Changed Connect to Live. Set step fwd and back to auto repeat

--- a/app/src/tools/gui/CaptureVideoToolWidget.ui
+++ b/app/src/tools/gui/CaptureVideoToolWidget.ui
@@ -228,7 +228,7 @@
              <bool>false</bool>
             </property>
             <property name="text">
-             <string>&amp;Connect</string>
+             <string>&amp;Live</string>
             </property>
            </widget>
           </item>
