--- a/app/src/tools/gui/TrackRobotToolWidget.ui
+++ b/app/src/tools/gui/TrackRobotToolWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
+    <width>644</width>
     <height>480</height>
    </rect>
   </property>
@@ -60,6 +60,9 @@
        <property name="checkable">
         <bool>false</bool>
        </property>
+       <property name="autoRepeat">
+        <bool>true</bool>
+       </property>
        <property name="popupMode">
         <enum>QToolButton::InstantPopup</enum>
        </property>
@@ -111,6 +114,9 @@
        </property>
        <property name="checkable">
         <bool>false</bool>
+       </property>
+       <property name="autoRepeat">
+        <bool>true</bool>
        </property>
        <property name="popupMode">
         <enum>QToolButton::InstantPopup</enum>
