Fix for #1032 (Tool tips floor plan creation buttons needed).

--- a/app/src/tools/gui/AnalyseResultsWidget.ui
+++ b/app/src/tools/gui/AnalyseResultsWidget.ui
@@ -44,6 +44,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="toolTip">
+        <string>Browse for file</string>
+       </property>
        <property name="text">
         <string/>
        </property>
