--- a/app/src/tools/gui/MeasureFloorToolWidget.ui
+++ b/app/src/tools/gui/MeasureFloorToolWidget.ui
@@ -63,7 +63,7 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>160</width>
+        <width>220</width>
         <height>0</height>
        </size>
       </property>
@@ -87,18 +87,16 @@
            <property name="margin">
             <number>0</number>
            </property>
-
            <item>
-	        <widget class="QGroupBox" name="groupBox_2">
+            <widget class="QGroupBox" name="groupBox_2">
              <property name="title">
               <string>Dimensions</string>
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_3">
               <item>
                <layout class="QFormLayout" name="formLayout_2">
-
-		        <item row="0" column="0">
-                 <widget class="QLabel" name="label_8">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="planSizeLabel">
                   <property name="text">
                    <string>Plan Size:</string>
                   </property>
@@ -111,9 +109,8 @@
                   </property>
                  </widget>
                 </item>
-
                 <item row="1" column="0">
-                 <widget class="QLabel" name="label_9">
+                 <widget class="QLabel" name="maskSizeLabel">
                   <property name="text">
                    <string>Mask Size:</string>
                   </property>
@@ -126,24 +123,24 @@
                   </property>
                  </widget>
                 </item>
-
-			   </layout>
+               </layout>
               </item>
              </layout>
             </widget>
            </item>
-
            <item>
-	        <widget class="QGroupBox" name="groupBox_3">
+            <widget class="QGroupBox" name="groupBox_3">
              <property name="title">
               <string>Locations</string>
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_4">
               <item>
                <layout class="QFormLayout" name="formLayout_3">
-
-		        <item row="0" column="0">
-                 <widget class="QLabel" name="label_10">
+                <property name="fieldGrowthPolicy">
+                 <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+                </property>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="startPointLabel">
                   <property name="text">
                    <string>Start Point:</string>
                   </property>
@@ -156,9 +153,8 @@
                   </property>
                  </widget>
                 </item>
-
                 <item row="1" column="0">
-                 <widget class="QLabel" name="label_11">
+                 <widget class="QLabel" name="endPointLabel">
                   <property name="text">
                    <string>End Point:</string>
                   </property>
@@ -171,9 +167,8 @@
                   </property>
                  </widget>
                 </item>
-
                 <item row="3" column="0">
-                 <widget class="QLabel" name="label_12">
+                 <widget class="QLabel" name="distanceLabel">
                   <property name="text">
                    <string>Distance:</string>
                   </property>
@@ -186,13 +181,11 @@
                   </property>
                  </widget>
                 </item>
-
-			   </layout>
+               </layout>
               </item>
              </layout>
             </widget>
            </item>
-
            <item>
             <spacer name="verticalSpacer">
              <property name="orientation">
@@ -206,7 +199,6 @@
              </property>
             </spacer>
            </item>
-
            <item>
             <widget class="QCheckBox" name="m_overlayMask">
              <property name="enabled">
@@ -217,7 +209,6 @@
              </property>
             </widget>
            </item>
-
           </layout>
          </item>
         </layout>
